@@ -821,7 +821,7 @@ _api_lan_cmd_wrapper_verify_packet (ipmi_ctx_t ctx,
    * For some reason, the authentication code is always blank when
    * using "Straight Password Key".
    *
-   * Discovered on Quanta Winterfell, Wiwynn Windmill
+   * Discovered on Intel Windmill/Quanta Winterfell/Wiwynn Windmill
    *
    * Hash is incorrect, unknown why calculation is incorrect.
    */
