@@ -260,7 +260,8 @@ Supermicro X8SIL-F.
 \fIsolchannelsupport\fR - This workaround flag will not check if SOL
 is supported on the current channel.  It works around remote systems
 that do not properly support this command.  Those hitting this issue
-may see "BMC Error" errors.  Issue observed on Quanta Winterfell.
+may see "BMC Error" errors.  Issue observed on Intel Windmill, Quanta
+Winterfell, and Wiwynn Windmill
 #include <@top_srcdir@/man/manpage-common-known-issues.man>
 .LP
 Some motherboards define an OEM SOL inactivity timeout for SOL
