@@ -34,5 +34,5 @@ the use of this option, as it removes an authentication check
 verifying the validity of a packet.  However, in most organizations,
 this is unlikely to be a security issue.  Those hitting this issue may
 see "connection timeout", "session timeout", or "password verification
-timeout" errors.  Issue observed on Xyratex FB-H8-SRAY, Quanta
-Winterfell, Wiwynn Windmill.
+timeout" errors.  Issue observed on Xyratex FB-H8-SRAY, Intel
+Windmill, Quanta Winterfell, and Wiwynn Windmill.
