@@ -1,3 +1,8 @@
+2014-01-09  Albert Chu <chu11@llnl.gov>
+
+	* Adjust comments/documentation for Quanta Winterfell & Wiwynn
+	Windmill.  Motherboard is Intel Windmill on all of them.
+	
 2014-01-08  Albert Chu <chu11@llnl.gov>
 
 	* Adjust comments/documentation for Quanta Winterfell & Wiwynn
